--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="editor pagina.css">
-    <title>Document</title>
+    <title>Proyecto</title>
 </head>
 <body>
     <nav>
